<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MachineInformation" Id="{c63bc5f5-1146-40ee-9a82-128639ff155f}">
    <Declaration><![CDATA[TYPE ST_MachineInformation :
STRUCT
	sFaam_id                  : STRING(20) ;	// 設備ID
	wsEquipment               : WSTRING(25) ;	// 設備名稱
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>